# Digi

./: .gitignore  DigiScheme.odp  DigiScheme2.odp  README.md  classes.odp
G4Digi/: .project  CMakeLists.txt  HitAttributeList.txt  detector.cc  detector.hh  event.cc  hit.cc  run.mac  setG4.sh  test.cc
G4Digi/include/: TestAdder.hh  TestAdderMessenger.hh  TestDigi.hh  TestDigitizer.hh  TestDigitizerInitializationModule.hh  TestDigitizerMessenger.hh  TestHit.hh  TestHitAttribute.hh  TestHitAttributeMessenger.hh  TestReadout.hh  TestRoot.hh  action.hh  adder.hh  constructionMessenger.hh  contruction.hh  detectorSD.hh  digitizer.hh  digitizerMessenger.hh  event.hh  generator.hh  hit.hh  physics.hh  run.hh  stepping.hh
G4Digi/keep/: action.cc  contruction.cc  contruction.hh  detector.cc  detector.hh  digi.cc  digi.hh  digitizer.cc  digitizer.hh  event.cc  event.hh  run.cc  stepping.cc  stepping.hh  test.cc  toRoot.cc  toRoot.hh
G4Digi/keep8.12.21/: action.cc  contruction.hh  detector.cc  detector.hh  event.cc  event.hh  hit.cc  hit.hh  physics.cc  run.cc  run.mac  test.cc
G4Digi/src/: TestAdder.cc  TestAdderMessenger.cc  TestDigi.cc  TestDigitizer.cc  TestDigitizerInitializationModule.cc  TestDigitizerMessenger.cc  TestHit.cc  TestHitAttribute.cc  TestHitAttributeMessenger.cc  TestReadout.cc  TestRoot.cc  action.cc  adder.cc  detectorSD.cc  (+10 more)
G4Digikeep/: CMakeLists.txt  action.cc  contruction.cc  contruction.hh  detector.cc  detector.hh  digi.cc  digi.hh  digitizer.cc  digitizer.hh  event.cc  event.hh  generator.cc  hit.cc  hit.hh  run.cc  setG4.sh  stepping.cc  test.cc
(+5905 files in other folders)
